# slaskell

./: .gitignore  Main.hs  index.html  slaskell.cabal  stack.yaml  style.css
