name:          slaskell
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple
Data-Files:
  index.html 
  style.css 

executable          slaskell
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , aeson
                  , blaze-html
                  , bytestring
                  , containers
                  , email-validate
                  , lens
                  , text
                  , transformers
                  , wreq

